Generate ImageDeleteResponse from swagger spec.
